# fluncle

./: .audit-token-smoke  .env.example  .gitignore  .gitleaks.toml  .oxlintrc.json  .prettierignore  AGENTS.md  DESIGN.md  LICENSE  LORE.md  NOTICE  PRODUCT.md  README.md  VOICE.md  bunfig.toml  drizzle.config.ts  package.json  renovate.json  skills-lock.json  tsconfig.json  turbo.json
.claude/: README.md  settings.json
.claude/agents/: canon-reviewer.md  contract-coverage-reviewer.md  naming-convention-linter.md  secret-hygiene-reviewer.md
.claude/hooks/: format-on-edit.sh  guard-protected-files.sh  remind-main-push.sh
.claude/skills/: copywriting-fluncle  copywriting-maurice  fluncle-audit-operator  fluncle-bpm-backfill  fluncle-catalogue-prune  (+16 more)
.codex/: README.md  config.toml  hooks.json
.deepsec/: .gitignore  README.md  deepsec.config.ts  package.json  pnpm-lock.yaml
.husky/: pre-commit
.impeccable/: design.json
.react-doctor/: false-positives.md
.superset/: config.json
apps/sonar/: Cargo.toml  README.md
apps/sonar/src/: config.rs  decode.rs  index.rs  kernel.rs  lib.rs  main.rs  search.rs  server.rs  turso.rs
apps/sonar/tests/: api.rs
docs/: ROADMAP.md  admin-jobs.csv  admin-jobs.html  admin-jobs.md  admin-shell.md  admin-tagging.md  album-artwork.md  album-entity.md  app-store-review.md  artist-relationship-rfc.md  artist-relationship.md  audit-backlog.md  bpm-key-accuracy-brief.md  catalogue-crawler.md  clip-drip-feed-rfc.md  clip-drip-feed-scope.md  clip-to-instagram-rfc.md  cockpit-roadmap.md  db-scale-backlog.md  dig.md  earth-overworld-rfc.md  earth-overworld.md  enrichment-agent.md  error-tracking.md  factory-to-orbit-brief.md  factory.md  fluncle-mixtapes-runbook.md  fluncle-studio-rfc.md  fluncle-studio.md  fluncle-user-story-matrix.xlsx  followups-backlog.csv  full-audio-embedding.md  full-audio-rfc.md  galaxy-game.md  galaxy-sprites.md  galaxy-ssh-rfc.md  galaxy.md  gpu-batch-embed.md  grain-diversity-brief.md  helm-roadmap.md  (+43 more)
patches/: @remotion%2Fbundler@4.0.487.patch
prompts/: cleanup.txt  user-stories.txt
raycast/: package.json  raycast-env.d.ts  tsconfig.json
scripts/: admin-jobs-html.ts  build-user-story-matrix.ts  install-skills.ts
spike/: build-indexed-100k.ts  cloud-100k-exact.ts  turso-cloud-spike.ts  turso-scale-spike.ts  vec-index-sweep.ts
src/: cli.ts  env.ts  output.ts  retry.ts  spotify.ts  telegram.ts
(+2283 files in other folders)
